--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,11 @@
   <name>helloworld Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
+
+ <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
   <properties>
-    <java.version>17</java.version>
+    <java.version>11</java.version>
     <maven.compiler.release>${java.version}</maven.compiler.release>
   </properties>
 
