--- a/pom.xml
+++ b/pom.xml
@@ -10,78 +10,74 @@
 
 
 
- <maven.compiler.source>1.8</maven.compiler.source>
-     <maven.compiler.target>1.8</maven.compiler.target>
-  <properties>
-    <java.version>11</java.version>
-    <maven.compiler.release>${java.version}</maven.compiler.release>
-  </properties>
+</properties>
+<!--  <url>http://maven.apache.org</url> -->
+    <dependencies>
+		
+			<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.13.2</version>
+		    <scope>test</scope>
+		</dependency>
+	    
+	    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.27</version>
+		</dependency>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>5.8.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.platform</groupId>
-      <artifactId>jakarta.jakartaee-web-api</artifactId>
-      <version>9.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-  </dependencies>
+	
+	
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.6.5.Final</version>
+		</dependency>
+	     <dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.11.0</version>
+  <type>maven-plugin</type>
+</dependency>
+	</dependencies>
+	
+	
+	
 
-  <build>
-    <finalName>helloworld</finalName>
-    <plugins>
-      <plugin>
-      
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.3.2</version>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.cargo</groupId>
-        <artifactId>cargo-maven3-plugin</artifactId>
-        <version>1.9.10</version>
-        <configuration>
-          <container>
-            <containerId>tomcat10x</containerId>
-            <type>embedded</type>
-          </container>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.microsoft.azure</groupId>
-        <artifactId>azure-webapp-maven-plugin</artifactId>
-        <version>2.5.0</version>
-        <configuration>
-          <schemaVersion>v2</schemaVersion>
-          <resourceGroup>helloworld-1648163079675-rg</resourceGroup>
-          <appName>helloworld-1648163079675</appName>
-          <pricingTier>P2v2</pricingTier>
-          <region>centralus</region>
-          <runtime>
-            <os>Linux</os>
-            <javaVersion>Java 17</javaVersion>
-            <webContainer>Tomcat 10.0</webContainer>
-          </runtime>
-          <deployment>
-            <resources>
-              <resource>
-                <directory>${project.basedir}/target</directory>
-                <includes>
-                  <include>*.war</include>
-                </includes>
-              </resource>
-            </resources>
-          </deployment>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+<distributionManagement>
+	<repository>
+		<id>nexus</id>
+		<name>hospital-app-releases</name>
+		<url>http://10.12.124.82:8081/repository/hospital-app-release/</url>
+	</repository>
+ 
+	<snapshotRepository>
+		<id>nexus</id>
+		<name>hospital-app-snapshots</name>
+		<url>http://10.12.124.82:8081/repository/hospital-app-snapshots/</url>
+	</snapshotRepository>
+
+</distributionManagement>
+	
+<build>
+        <pluginManagement>
+            <plugins>
+	<plugin>
+	    <artifactId>maven-war-plugin</artifactId>
+	    <version>2.4</version>
+	    <configuration>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+	    </configuration>
+	</plugin>
+		   
+            </plugins>
+        </pluginManagement>
+ </build>
+	
+	
+
 </project>
