--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,12 @@
   <version>1.0-SNAPSHOT</version>
   <name>helloworld Maven Webapp</name>
 
-
-
+<properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
 </properties>
+
+
 <!--  <url>http://maven.apache.org</url> -->
     <dependencies>
 		
